--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        Exercise 1 @ https://github.com/reinakv/Studio-CodingforWeb/tree/main/exercise1
+    </p>
 </body>
 </html>
