--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <p>
-        Exercise 1 @ https://github.com/reinakv/Studio-CodingforWeb/tree/main/exercise1
+        <a href="https://github.com/reinakv/Studio-CodingforWeb/tree/main/exercise1">Day 1 Exercise</a>
+        <a href="https://github.com/reinakv/Studio-CodingforWeb/tree/main/Day%203%20Exercise">Day 1 Exercise 1</a>
     </p>
 </body>
 </html>
