--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>
         <a href="https://github.com/reinakv/Studio-CodingforWeb/tree/main/exercise1">Day 1 Exercise</a>
-        <a href="https://github.com/reinakv/Studio-CodingforWeb/tree/main/Day%203%20Exercise">Day 1 Exercise 1</a>
+        <a href="https://github.com/reinakv/Studio-CodingforWeb/tree/main/Day%203%20Exercise">Day 3 Exercise</a>
     </p>
 </body>
 </html>
