--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <p>
-        <a href="https://github.com/reinakv/Studio-CodingforWeb/blob/main/exercise1/exercise1.html">Day 1 Exercise</a>
-        <a href="https://github.com/reinakv/Studio-CodingforWeb/blob/main/Day%203%20Exercise/index.html">Day 3 Exercise</a>
+        <a href="https://reinakv.github.io/Studio-CodingforWeb/exercise1/exercise1.html">Day 1 Exercise</a>
+        <a href="https://reinakv.github.io/Studio-CodingforWeb//Day%203%20Exercise/index.html">Day 3 Exercise</a>
     </p>
 </body>
 </html>
