--- a/exercise1/exercise1.html
+++ b/exercise1/exercise1.html
@@ -4,41 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>1st Assignment</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
+    <title>Exercise 1</title>
 </head>
+<header>
+  <h2 id="heading">Day 1: Exercise 1</h2>
+  <hr class="line1">
+</header>
 <body>
     <div class="split left">
         <div class="centered">
           <img src="image1.1.jpg">
-          <h2>img1</h2>
-          <p>Some text.</p>
-
-          <img src="image1.2.jpg">
-          <h2>img2</h2>
-          <p>Some text.</p>
-
-          <img src="image1.3.png">
-          <h2>img3</h2>
-          <p>Some text.</p>
-
-          <img src="image1.4.jpg">
-          <h2>img4</h2>
-          <p>Some text.</p>
+          <h2 id="title">Starry Night</h2>
+          <p>
+            Vincent van Gogh (1853-1890), a Dutch Post-Impressionist artist, stands as one of the most iconic figures in the history 
+            of Western art. His distinct style and innovative techniques had a profound impact on the trajectory of art, bridging the gap 
+            between Impressionism and modern art movements. Van Gogh's art is characterized by his bold and vibrant use of color, his thick
+            and textured brushwork known as impasto, and his deeply emotional approach to his subjects. <br><br> His paintings go beyond mere 
+            visual representation; they serve as windows into his inner world, expressing his own struggles, emotions, and perspectives.
+            Throughout his life, van Gogh battled mental health issues and periods of intense emotional turmoil. These personal struggles 
+            found their way into his art, resulting in pieces that are charged with raw energy and a poignant sense of authenticity. 
+            Whether depicting the serene beauty of a starry night in "The Starry Night" or the introspective intensity of self-portraits 
+            like "Self-Portrait with Bandaged Ear," van Gogh's works are imbued with a unique blend of visual dynamism and emotional depth. <br><br>
+            Despite facing financial difficulties and limited recognition during his lifetime, his legacy has since grown exponentially. 
+            His innovative use of color and brushwork, coupled with his ability to convey complex emotions through his art, have solidified 
+            his place as an artistic visionary whose influence continues to resonate with artists and art enthusiasts worldwide.
+          </p>
       </div>
       
       <div class="split right">
         <div class="centered">
           <img src="image2.1.png">
-          <h2>img1</h2>
-          <p>Some text here too.</p>
-
-          <img src="image2.2.jpg">
-          <h2>img2</h2>
-          <p>Some text.</p>
-
-          <img src="image2.3.jpg">
-          <h2>img3</h2>
-          <p>Some text.</p>
+          <h2 id="title">The Calling of St Matthew</h2>
+          <p>
+            Michelangelo Merisi da Caravaggio (1571-1610) was a groundbreaking Italian Baroque painter whose artistic 
+            innovations left an indelible mark on the world of art. Caravaggio's approach to painting was marked by his unprecedented use of light and shadow, 
+            a technique known as chiaroscuro. This technique not only added a heightened sense of realism to his works but also created a strong contrast 
+            between light and darkness, effectively drawing the viewer's attention to the focal points of his compositions. <br> His subjects, often depicted in stark, 
+            dramatic lighting, seemed to emerge from the darkness with a striking sense of physical presence. 
+            Caravaggio's ability to capture the human form with remarkable precision, whether in religious scenes or everyday situations, showcased his deep 
+            understanding of anatomy and his keen observational skills. <br><br><br>
+            Caravaggio's art was notable not only for its technical mastery but also for its emotional depth. His paintings often depicted intense moments of human 
+            experience, from religious scenes like "The Supper at Emmaus" to genre paintings like "The Cardsharps." <br> Through his work, Caravaggio explored 
+            themes of passion, suffering, and mortality, inviting viewers to contemplate the complexities of life and spirituality. However, 
+            his personal life was also marked by controversy and turmoil. He was known for his irascible temperament and was frequently involved in brawls 
+            and legal disputes, adding an element of drama to his own story that mirrored the intensity of his art.
+          </p>
         </div>
       </div>
 </body>
