--- a/index.html
+++ b/index.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!--Loading the fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css">
+  <title>Semester 5: Cycle 1</title>
 </head>
+<header class="header-container">
+  <h2 class="heading1">
+    Studio - Coding for Web
+  </h2>
+  <h3 class="name">
+    Annie Vaithara
+  </h3>
+</header>
+<hr class="line1">
 <body>
-    <p>
-        <a href="https://reinakv.github.io/Studio-CodingforWeb/exercise1/exercise1.html">Day 1 Exercise</a>
-        <a href="https://reinakv.github.io/Studio-CodingforWeb//Day%203%20Exercise/index.html">Day 3 Exercise</a>
-    </p>
+  <div id="container1">
+    <h3 class="heading2">Tasks</h3>
+  </div>
+  <div id="exercises">
+    <ul>
+      <li>
+        <a href="https://reinakv.github.io/Studio-CodingforWeb/exercise1/exercise1.html">
+          Exercise 1
+        </a>
+        <p>
+          This is a webpage that displays information and images about two different artists, Vincent van Gogh and Caravaggio, along with their famous artworks. The webpage uses HTML and CSS to create a split layout with two sections, each containing an image, a title, and a description of the artist and their art style.
+        </p>
+      </li>
+      <li>
+        <a href="https://reinakv.github.io/Studio-CodingforWeb/2.1%20-%20Css%20Selector%20Exercise/index.html">
+          Exercise 2
+        </a>
+        <p>
+          The exercise was targeted towards the understanding of JavaScript. It creates a webpage with multiple sections and a div, each containing paragraphs and lists. The purpose of the exercise being able to apply styling changes to specific elements within the HTML.
+        </p>
+      </li>
+      <li>
+        <a href="https://reinakv.github.io/Studio-CodingforWeb//Day%203%20Exercise/index.html">
+          Exercise 3
+        </a>
+        <p>
+          This website serves as a practice exercise, expanding knowledge of HTML, CSS, and JavaScript. It features interactive elements like a button to make text disappear, options to change font styles, a slider to adjust box width, and a dropdown menu to display different images.
+        </p>
+      </li>
+    </ul>
+  </div>
+
+
+  <div id="container1">
+    <h3 class="heading3">Assignments</h3>
+  </div>
+  <div>
+    <ul id="assignment-list">
+      <li id="assignment1">
+        <a href="https://reinakv.github.io/Studio-CodingforWeb/A1%20Assignment/index.html">
+          # Assignment 1
+        </a>
+        <p>
+          The A1 task for the Studio is a "Good Morning Message Maker". It focuses mainly on the aspects of JavaScript interactions being used on the webpage. From picking an image to adding a custom text, the webpage relies on JS script.
+        </p>
+      </li>
+      <li id="assignment2">
+        <a href="">
+          # Assignment 2
+        </a>
+        <p>
+          
+        </p>
+      </li>
+      <li id="assignment3">
+        <a href="">
+          # Assignment 3
+        </a>
+        <p>
+          
+        <p>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
