--- a/A1 Assignment/index.html
+++ b/A1 Assignment/index.html
@@ -52,9 +52,9 @@
             <br>
             <select name="dropdown-menu" id="dropdown" onchange="chooseImage()">
                 <option value="">Select an Image</option>
-                <option value="./images/flower 1.jpg">Flowers</option>
-                <option value="./images/sunrise 3.jpg">Sunrise</option>
-                <option value="./images/still life 1.jpg">Still Life</option>
+                <option value="./images/flower.jpeg">Flowers</option>
+                <option value="./images/sunrise.jpeg">Sunrise</option>
+                <option value="./images/still-life.jpeg">Still Life</option>
             </select>
             <br>
             <hr>
