--- a/A1 Assignment/index.html
+++ b/A1 Assignment/index.html
@@ -52,7 +52,7 @@
             <br>
             <select name="dropdown-menu" id="dropdown" onchange="chooseImage()">
                 <option value="">Select an Image</option>
-                <option value="./images/flower.jpeg">Flowers</option>
+                <option value="./images/flowers.jpeg">Flowers</option>
                 <option value="./images/sunrise.jpeg">Sunrise</option>
                 <option value="./images/still-life.jpeg">Still Life</option>
             </select>
