--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Exercise 1
         </a>
         <p>
-          This is a webpage that displays information and images about two different artists, Vincent van Gogh and Caravaggio, along with their famous artworks. The webpage uses HTML and CSS to create a split layout with two sections, each containing an image, a title, and a description of the artist and their art style.
+          Split Screen Webpage
         </p>
       </li>
       <li>
@@ -40,7 +40,7 @@
           Exercise 2
         </a>
         <p>
-          The exercise was targeted towards the understanding of JavaScript. It creates a webpage with multiple sections and a div, each containing paragraphs and lists. The purpose of the exercise being able to apply styling changes to specific elements within the HTML.
+          CSS Selectors
         </p>
       </li>
       <li>
@@ -48,7 +48,15 @@
           Exercise 3
         </a>
         <p>
-          This website serves as a practice exercise, expanding knowledge of HTML, CSS, and JavaScript. It features interactive elements like a button to make text disappear, options to change font styles, a slider to adjust box width, and a dropdown menu to display different images.
+          JavaScript Practice
+        </p>
+      </li>
+      <li>
+        <a href="https://reinakv.github.io/Studio-CodingforWeb/5.1%20-%20CSS%20Positions/index.html">
+          Exercise 4
+        </a>
+        <p>
+          CSS Positions Exercise
         </p>
       </li>
     </ul>
