--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
         
         <li id="assignment2">
-          <a href="">
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20Assignment/index.html">
             # Assignment 2
           </a>
-          <p></p>
+          <p>Pictographical Chart</p>
         </li>
 
         
