--- a/9.1 & 9.2/index.html
+++ b/9.1 & 9.2/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js" type="text/javascript" defer></script>
-    <title>Document</title>
+    <title>Day 9 Exercise</title>
 </head>
 <body>
     <div class="contain">
