--- a/index.html
+++ b/index.html
@@ -38,20 +38,33 @@
           <p>
             # Assignment 1
           </p>
-          <a href="https://reinakv.github.io/Studio-CodingforWeb/A1%20Assignment/index.html">
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A1%20Assignment/index.html" class="link">
           Good Morning Message Maker
           </a>
         </li>
         <li id="assignment2">
           <p>
             # Assignment 2
+            <br>
+            <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20-%20Version%201/reference.jpeg" class="smol">
+              Reference Image
+            </a>
           </p>
-          <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20-%20Version%201/">
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20-%20Version%201/" class="link">
             Educational Webcharts V.1
           </a>
           <br>
-          <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20-%20Version%202/index.html">
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20-%20Version%201/DOM%20Structure%20V1.txt" class="smol">
+            DOM Structure
+          </a>
+          <br>
+          <br>
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20-%20Version%202/index.html" class="link">
             Educational Webcharts V.2
+          </a>
+          <br>
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A2%20-%20Version%202/DOM%20Structure%20V2.txt" class="smol">
+            DOM Structure
           </a>
         </li>
         <li id="assignment3">
