--- a/index.html
+++ b/index.html
@@ -149,9 +149,38 @@
             Tuesday - 22.08.23
           </p>
         </li>
+        <li>
+          <div class="exercise" style="cursor: pointer;" onclick="redirectToURL('https://reinakv.github.io/Studio-CodingforWeb/11%20-%20Website%20Practice/index.html')">
+            <p class="description">
+              Exercise 8: Webpage Practice
+            </p>
+          </div>
+          <p class="date">
+            Friday - 25.08.23
+          </p>
+        </li>
+        <li>
+          <div class="exercise" style="cursor: pointer;" onclick="redirectToURL('https://github.com/reinakv/PHP_files/tree/main/12%20php%20multipage%20site')">
+            <p class="description">
+              Exercise 9: Multipage PHP Website
+            </p>
+          </div>
+          <p class="date">
+            Monday - 28.08.23
+          </p>
+        </li>
+        <li>
+          <div class="exercise" style="cursor: pointer;" onclick="redirectToURL('https://reinakv.github.io/Studio-CodingforWeb/13%20-%20JS%20Libraries/index.html')">
+            <p class="description">
+              Exercise 10: JavaScript Libraries
+            </p>
+          </div>
+          <p class="date">
+            Tuesday - 29.08.23
+          </p>
+        </li>
       </ul>
     </div>
   </div>
 </body>
 </html>
-
