--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
           <p>
             # Assignment 3
           </p>
-          <a></a>
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A3/index.html">
+            Reimagining TS Eras Tour Webpage
+          </a>
         </li>
       </ul>
     </div>
