--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p>
             # Assignment 3
           </p>
-          <a href="https://reinakv.github.io/Studio-CodingforWeb/A3/index.html">
+          <a href="https://reinakv.github.io/Studio-CodingforWeb/A3/index.html"  class="link">
             Reimagining TS Eras Tour Webpage
           </a>
         </li>
